WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
195585
API test WebKit.RequestTextInputContext fails on iOS
https://bugs.webkit.org/show_bug.cgi?id=195585
Summary
API test WebKit.RequestTextInputContext fails on iOS
Tim Horton
Reported
2019-03-11 17:46:06 PDT
API test WebKit.RequestTextInputContext fails on iOS
Attachments
Patch
(9.01 KB, patch)
2019-03-11 17:46 PDT
,
Tim Horton
no flags
Details
Formatted Diff
Diff
Patch
(9.10 KB, patch)
2019-03-11 18:02 PDT
,
Tim Horton
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2019-03-11 17:46:25 PDT
Created
attachment 364320
[details]
Patch
Simon Fraser (smfr)
Comment 2
2019-03-11 17:55:36 PDT
Comment on
attachment 364320
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=364320&action=review
> Source/WebKit/UIProcess/API/Cocoa/WKWebView.mm:4834 > + // FIXME: It should be easier to talk about WKWebView coordinates in a consistent and cross-platform way. > + // Currently, neither "root view" nor "window" mean "WKWebView coordinates" on both platforms.
You should probably reference
webkit.org/b/193649
Tim Horton
Comment 3
2019-03-11 18:02:33 PDT
Created
attachment 364325
[details]
Patch
WebKit Commit Bot
Comment 4
2019-03-11 18:53:16 PDT
The commit-queue encountered the following flaky tests while processing
attachment 364325
[details]
: legacy-animation-engine/compositing/updates/animation-non-composited.html
bug 195596
(author:
graouts@apple.com
) The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 5
2019-03-11 18:54:04 PDT
Comment on
attachment 364325
[details]
Patch Clearing flags on attachment: 364325 Committed
r242762
: <
https://trac.webkit.org/changeset/242762
>
WebKit Commit Bot
Comment 6
2019-03-11 18:54:06 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 7
2019-03-11 18:55:20 PDT
<
rdar://problem/48793339
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug